tests/NormalTests/paczka1/small_fuzzy/57924795.err
Error in line 2: tb4G A455 51,6
Error in line 6: oJrbBsN3J34 S47 10,5
Error in line 4: j1ObGWYxTa S47 55,8
